/ ‘Organizador/Doggi.db’ + ‘Organizador/Doggi/migrations/0002_auto__add_producto__add_cliente__add_tareas.py’ / ‘Organizador/Doggi/models.py’ / ‘Organizador/Organizador/plantillas/inicio.html’

--- a/Organizador/Organizador/plantillas/inicio.html
+++ b/Organizador/Organizador/plantillas/inicio.html
@@ -4,7 +4,8 @@
 {% block contenido %}
 	{% for cliente in clientes %}
 		<ul>
-			<li><a href="/cliente"></a>{{cliente.nombre}}</li>
+			<li><a href="/cliente"></a>{{cliente.nombre_apellido}}</li>
+		{% empty %}
 		</ul>
 	{% endfor %}
 {% endblock %}
